[tool.poetry]
name = "accel"
version = "0.1.0"
description = ""
authors = ["waffoo <mukuwaffle@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7"
opencv-python = "^4.2.0"
torch = "^1.6.0"
pytest = "^6.0.2"

[tool.poetry.dev-dependencies]
mlflow = "^1.11.0"
pybullet = "^3.0.4"
hydra-core = "^1.0.3"
gym = "^0.17.2"
atari-py = "^0.2.6"
d4rl = {git = "https://github.com/rail-berkeley/d4rl.git", rev = "master"}
procgen = "^0.10.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
