[tool.poetry]
name = "accel"
version = "0.1.0"
description = ""
authors = ["waffoo <mukuwaffle@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
opencv-python = "^4.2.0"
pytest = "^6.0.2"
scikit-learn = "^0.24.2"
typing-extensions = "^3.10.0"
pygifsicle = "^1.0.4"
comet-ml = "^3.15.1"

[tool.poetry.dev-dependencies]
pybullet = "^3.0.4"
hydra-core = "^1.0.3"
gym = "^0.17.2"
atari-py = "0.2.6"
procgen = "^0.10.4"
imageio = "^2.9.0"
pygifsicle = "^1.0.4"
mujoco-py = "^2.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
